src/main/webapp/stylesheets/main.css
body {
    font-family: 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', 'Consolas', 'Monaco', Courier, monospace !important;
}

body, html, div, form, input {
    margin: 0;
    font-size: 12px;
}

body {
    height: 99%;
    background-color: black;
}

.console {
    left: 0;
    right: 0;
    color: #EEE;
    background-color: black;
    font-family: 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', 'Consolas', 'Monaco', Courier, monospace !important;
    margin: 0;
    border: none;
    padding: 5px;
}

a:link, a:visited {
    color: white;
}

#output {
    overflow-y: auto;
    top: 0;
    height: 100%;
    white-space: pre-wrap; /* css-3 */
    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
    white-space: -pre-wrap; /* Opera 4-6 */
    white-space: -o-pre-wrap; /* Opera 7 */
    word-wrap: break-word; /* Internet Explorer 5.5+ */
}

#form, #query_button, #form .CodeMirror {
	z-index: 100;
}

#graph {
    /* display:none; */
    width: 50%;
    height: 90%;
    position: absolute;
    background: none;
    z-index: 10;
    top: 0px;
    right: 15px;

    /*
    filter:alpha(opacity=20);
    -moz-opacity:0.2;
    opacity:0.2;
    */
}

#version {
   display: none;
}

pre {
  font-family: 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', 'Consolas', 'Monaco', Courier, monospace !important;
}

.popup {
  	font-family: 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', 'Consolas', 'Monaco', Courier, monospace !important;
    background-color: #202020;
    color: #EEE;
    border: 2px solid #a9a9a9;
    position: absolute;
    top: 10%;
    bottom: 10%;
    right: 10%;
    left: 10%;
    display: none;
    /*
    width: 80%;
    height: 80%;
    */
    z-index: 50;
    padding: 20px;
}

.btn_pretty {
    z-index: 100;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    border-radius: 4px;
    border: none;
    background-color: #606060;
    padding: 3px;
    display: inline-block;
    text-decoration: none;
    color: #Fff;
    text-shadow: 1px 1px 1px #2e2e2e;
    filter: dropshadow(color = #2e2e2e, offx = 1, offy = 1);
    font-size: 100%;
    vertical-align: middle;
    cursor: hand;
    cursor: pointer;
}

.btn_pretty:hover {
    -webkit-box-shadow: 0 0 0;
    -moz-box-shadow: 0 0 0;
    box-shadow: 0 0 0;
}

.button {
    z-index: 100;
    width: 16px;
    height: 14px;
}

#input {
}

.btn_close {
    z-index: 100;
    position: absolute;
    right: 5px; 
    top:5px;
}

#query_button {
    position: absolute;
    right: 1px;
    bottom: 1px;
    width: 4.7%;
    margin: 0px;
}


code {
    font-family: 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', 'Consolas', 'Monaco', Courier, monospace !important;
    background-color: #3d3d3d;
}

.welcome {
    font-family: 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', 'Consolas', 'Monaco', Courier, monospace !important;
    font-size: 1.2em;
}

h3 {
    margin: 1px;
}

.CodeMirror {
    border: 1px solid #eee;
    position: absolute;
    width: 94%;
    bottom: 0px;
}

.CodeMirror-scroll {
    height: auto;
    overflow-y: hidden;
    overflow-x: auto;
}

